# X650_pixhawk6x_Jetson_Orin_Setup_Guide

./: LICENSE  README.md  note.md
lio/: Lidar_and_LIO.md  my1.md
lio/fast_lio/launch/: mapping_mid360.launch
lio/lidar_to_mavros/: lidar_to_mavros_tmux.sh
lio/lidar_to_mavros/src/lidar_to_mavros/: CMakeLists.txt  package.xml
lio/lidar_to_mavros/src/lidar_to_mavros/other_methods/: lidar_to_mavros_method2.sh  method2.py
lio/lidar_to_mavros/src/lidar_to_mavros/src/: lidar_to_mavros.cpp
own_notebook/: data_collect.sh  my.md  ownnote.md
